# datafusion

./: .asf.yaml  .buildinfo  .dockerignore  .editorconfig  .env  .gitattributes  .github_changelog_generator  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CASE.md  CHANGELOG.md  CI_INVESTIGATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPERS.md  DOC.md  LICENSE.txt  MATCH_RECOGNIZE.md  MIGRATION_GUIDE.md  NOTICE.txt  README.md  REWRITE_DEPENDENT_JOIN.MD  SYNNADA-NOTICE.txt  SYNNADA-README.md  _config.yml  analyze_ab.py  clippy.toml  datafusion-testing  datafusion_contributor_guide.md  decisions.md  diagnostic_config_test.rs  doap.rdf  docker-compose.yml  download.html  genindex.html  improvements.md  index.html  (+35 more)
.cargo/: config  (+1 more)
avro-converter/: Cargo.toml
avro-converter/src/: main.rs
ballista-examples/: Cargo.toml  README.md
ballista-examples/examples/: ballista-dataframe.rs  ballista-sql.rs  simple_udf_plugin.rs  test_sql.rs  use_simple_udf_plugin.rs
ballista/python/: Cargo.toml
benchmarks/: .gitignore  Cargo.toml  README.md  bench.sh  collect_bench.sh  compare.py  compare_tpcds.sh  compare_tpch.sh  compile_profile.py  docker-compose.yaml  entrypoint.sh  hashagg-results.md  history.lp  join-results.md  lineformat.py  lineprotocol.py  parquet_prefetch_benchmark.md  pyproject.toml  requirements.txt  results.txt  run.sh  sort-results.md  sort_clickbench.py  tpch-gen.sh  tpchgen.dockerfile  transfer_dat_parquet.py  verify.sh
benchmarks/benches/: sql.rs
benchmarks/db-benchmark/: README.md  db-benchmark.dockerfile  groupby-datafusion.py  join-datafusion.py  run-bench.sh  run.sh
benchmarks/expected-plans/: q1.txt  q10.txt  q11.txt  q12.txt  q13.txt  q14.txt  q15.txt  q16.txt  q17.txt  q18.txt  q19.txt  q2.txt  q20.txt  q21.txt  q22.txt  q3.txt  q4.txt  q5.txt  q6.txt  q7.txt  q8.txt  q9.txt
benchmarks/queries/: q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q23.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
benchmarks/reports/: hash_join_dynamic_filter_default_parquet.md  hash_join_dynamic_filter_expanded_matrix.md
benchmarks/spm_data/: low_card_spm_small_batch.csv
benchmarks/sql_benchmarks/: README.md
benchmarks/src/: access_log_gen.rs  asof.rs  cancellation.rs  clickbench.rs  dict.rs  distinct.rs  h2o.rs  handlers.rs  hj.rs  large_values.rs  lib.rs  main.rs  match_recognize_tpch.rs  nlj.rs  options.rs  parquet_filter.rs  push_down_topk.rs  quantiles.rs  run.rs  smj.rs  sort.rs  sort_pushdown.rs  sort_tpch.rs  spm.rs  sql_benchmark.rs  sql_benchmark_runner.rs  sql_benchmark_suite.rs  tpch.rs  window_tpch.rs
benchmarks/visualize/: docker-compose.yml  influxv2.env  telegraf.conf
datafusion/: CHANGELOG.md  Cargo.toml  README.md  build.rs  changes.txt
datafusion-cli/: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  external_table_bug  foo.csv  pyproject.toml  test.sql
datafusion-cli/examples/: cli-custom-udf.rs  cli-session-context.rs
datafusion-cli/src/: catalog.rs  cli_context.rs  command.rs  context.rs  entry_point.rs  error.rs  exec.rs  format.rs  functions.rs  helper.rs  hf_store.rs  highlighter.rs  lib.rs  main.rs  memory_metrics.rs  object_storage.rs  pager.rs  pool_type.rs  print_format.rs  print_options.rs
datafusion-cli/tests/: cli_integration.rs  integration_setup.bash  snaphots.rs
datafusion-common/: Cargo.toml  README.md
datafusion-common/src/: column.rs  dfschema.rs  error.rs  field_util.rs  lib.rs  pyarrow.rs  record_batch.rs  scalar.rs
datafusion-examples/: Cargo.toml  README.md  examples.toml
datafusion-examples/data/: README.md
datafusion-examples/examples/: README.md  advanced_parquet_index.rs  advanced_udaf.rs  advanced_udf.rs  advanced_udwf.rs  analyzer_rule.rs  async_udf.rs  avro_sql.rs  bench.py  benchmark.rs  catalog.rs  complex_udf.rs  composed_extension_codec.rs  config_extension.rs  csv_compressed.rs  csv_dataframe.rs  csv_decimal_sql.rs  csv_json_opener.rs  csv_opener.rs  csv_sql.rs  csv_sql_streaming.rs  custom_datasource.rs  custom_file_casts.rs  custom_file_format.rs  dataframe-to-s3.rs  dataframe.rs  dataframe_in_memory.rs  dataframe_output.rs  dataframe_subquery.rs  dataframe_to_timestamp.rs  date_time_functions.rs  default_column_values.rs  deserialize_to_struct.rs  dump_plan.rs  dynamic_csv_sql.rs  embedding_parquet_indexes.rs  empty_select.rs  explain_memory.rs  expr_api.rs  external_function_package.rs  (+78 more)
datafusion-examples/src/: lib.rs
datafusion-examples/test_csv/: 5idJzooCjySkTpLf_0.csv  HGQahh0J2jquvQ6M_0.csv
datafusion-examples/test_json/: i87q26cL7eYNxxnQ_0.json
datafusion-examples/test_parquet/: e9tydLQCWeJ8ul8D_0.parquet
datafusion-expr/: Cargo.toml
datafusion-expr/src/: accumulator.rs  aggregate_function.rs  built_in_function.rs  columnar_value.rs  expr.rs  expr_fn.rs  function.rs  lib.rs  literal.rs  operator.rs  signature.rs  udaf.rs  udf.rs  window_frame.rs  window_function.rs
datafusion-jit/: Cargo.toml
datafusion-jit/src/: api.rs  ast.rs  jit.rs  lib.rs
datafusion-scheduler/: Cargo.toml
datafusion-scheduler/src/: executor.rs  lib.rs  scheduler.rs  stage.rs  test_util.rs
datafusion-scheduler/tests/: equivalence.rs  error_propagation.rs  single_stage.rs  stage_splitting.rs  streaming.rs  two_stage.rs
datafusion/aggregate-functions/: Cargo.toml
datafusion/benches/: aggregate_query_sql.rs  filter_query_sql.rs  jit.rs  math_query_sql.rs  parquet_query_sql.rs  physical_plan.rs  scalar.rs  sort_limit_query_sql.rs  window_query_sql.rs
datafusion/c/: Cargo.toml
datafusion/catalog/: Cargo.toml  README.md
datafusion/catalog-datasource/: Cargo.toml  README.md
datafusion/catalog-listing/: Cargo.toml  README.md
datafusion/ci-dummy/: Cargo.toml
python/: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE.txt  README.md  pyproject.toml  requirements-37.txt  requirements-38.txt  requirements-39.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  rust-toolchain
tokomak/: Cargo.toml  README.md
(+8315 files in other folders)
