[package]
name = "avro-converter"
version = "4.0.0-SNAPSHOT"
edition = "2018"
description = "DataFusion avro to parquet converter"
homepage = "https://github.com/apache/arrow-datafusion"
repository = "https://github.com/apache/arrow-datafusion"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
license = "Apache-2.0"
keywords = [ "arrow", "avro", "parquet" ]

[[bin]]
path = "src/main.rs"
name = "avro-converter"

[dependencies]
arrow-flight = { version = "5.0" }
datafusion = { path = "../datafusion" }
prost = "0.8"
tonic = "0.5"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
futures = "0.3"
num_cpus = "1.13.0"
structopt = { version = "0.3" }
