# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-cli"
description = "Command Line Client for DataFusion query engine."
version = "43.0.0"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
edition = "2021"
keywords = ["arrow", "datafusion", "query", "sql"]
license = "Apache-2.0"
homepage = "https://datafusion.apache.org"
repository = "https://github.com/apache/datafusion"
# Specify MSRV here as `cargo msrv` doesn't support workspace version
rust-version = "1.80.1"
readme = "README.md"

[dependencies]
arrow = { version = "53.0.0" }
async-trait = "0.1.73"
aws-config = "1.5.5"
aws-sdk-sso = "1.43.0"
aws-sdk-ssooidc = "1.44.0"
aws-sdk-sts = "1.43.0"
# end pin aws-sdk crates
aws-credential-types = "1.2.0"
clap = { version = "4.5.16", features = ["derive", "cargo"] }
datafusion = { path = "../datafusion/core", version = "43.0.0", features = [
    "avro",
    "crypto_expressions",
    "datetime_expressions",
    "encoding_expressions",
    "parquet",
    "regex_expressions",
    "unicode_expressions",
    "compression",
] }
datafusion-catalog = { path = "../datafusion/catalog", version = "43.0.0" }
dirs = "5.0.1"
env_logger = "0.11"
futures = "0.3"
mimalloc = { version = "0.1", default-features = false }
object_store = { version = "0.11.0", features = ["aws", "gcp", "http"] }
parking_lot = { version = "0.12" }
parquet = { version = "53.0.0", default-features = false }
regex = "1.8"
rustyline = "14.0"
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot", "signal"] }
url = "2.2"

[dev-dependencies]
assert_cmd = "2.0"
ctor = "0.2.0"
predicates = "3.0"
rstest = "0.22"

# Temp patch to main of arrow-rs
[patch.crates-io]
arrow = { git = "https://github.com/apache/arrow-rs.git", rev = "93ce75c75d2f4c753345bd585cbbe0bb978f4bab" }
arrow-array = { git = "https://github.com/apache/arrow-rs.git", rev = "93ce75c75d2f4c753345bd585cbbe0bb978f4bab" }
arrow-buffer = { git = "https://github.com/apache/arrow-rs.git", rev = "93ce75c75d2f4c753345bd585cbbe0bb978f4bab" }
arrow-cast = { git = "https://github.com/apache/arrow-rs.git", rev = "93ce75c75d2f4c753345bd585cbbe0bb978f4bab" }
arrow-data = { git = "https://github.com/apache/arrow-rs.git", rev = "93ce75c75d2f4c753345bd585cbbe0bb978f4bab" }
arrow-ipc = { git = "https://github.com/apache/arrow-rs.git", rev = "93ce75c75d2f4c753345bd585cbbe0bb978f4bab" }
arrow-schema = { git = "https://github.com/apache/arrow-rs.git", rev = "93ce75c75d2f4c753345bd585cbbe0bb978f4bab" }
arrow-select = { git = "https://github.com/apache/arrow-rs.git", rev = "93ce75c75d2f4c753345bd585cbbe0bb978f4bab" }
arrow-string = { git = "https://github.com/apache/arrow-rs.git", rev = "93ce75c75d2f4c753345bd585cbbe0bb978f4bab" }
arrow-ord = { git = "https://github.com/apache/arrow-rs.git", rev = "93ce75c75d2f4c753345bd585cbbe0bb978f4bab" }
arrow-flight = { git = "https://github.com/apache/arrow-rs.git", rev = "93ce75c75d2f4c753345bd585cbbe0bb978f4bab" }
parquet = { git = "https://github.com/apache/arrow-rs.git", rev = "93ce75c75d2f4c753345bd585cbbe0bb978f4bab" }
