# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-cli"
description = "Command Line Client for DataFusion query engine."
version = "45.0.0"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
edition = "2021"
keywords = ["arrow", "datafusion", "query", "sql"]
license = "Apache-2.0"
homepage = "https://datafusion.apache.org"
repository = "https://github.com/apache/datafusion"
rust-version = "1.81.0"
readme = "README.md"

[dependencies]
arrow = { version = "54.0.0" }
async-trait = "0.1.0"
aws-config = "1.5.0"
aws-credential-types = "1.2.0"
aws-sdk-sso = "1.57.0"
aws-sdk-ssooidc = "1.57.0"
aws-sdk-sts = "1.57.0"
clap = { version = "4.5.27", features = ["derive", "cargo"] }
datafusion = { path = "../datafusion/core", version = "45.0.0", features = [
    "avro",
    "crypto_expressions",
    "datetime_expressions",
    "encoding_expressions",
    "parquet",
    "recursive_protection",
    "regex_expressions",
    "unicode_expressions",
    "compression",
] }
datafusion-catalog = { path = "../datafusion/catalog", version = "45.0.0" }
dirs = "6.0.0"
env_logger = "0.11"
futures = "0.3"
# pin as home 0.5.11 has MSRV 1.81. Can remove this once we bump MSRV to 1.81
home = "=0.5.11"
mimalloc = { version = "0.1", default-features = false }
object_store = { version = "0.11.0", features = ["aws", "gcp", "http"] }
parking_lot = { version = "0.12" }
parquet = { version = "54.0.0", default-features = false }
regex = "1.8"
rustyline = "15.0"
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot", "signal"] }
url = "2.5.4"

[dev-dependencies]
assert_cmd = "2.0"
ctor = "0.2.9"
predicates = "3.0"
rstest = "0.24"

[profile.ci]
inherits = "dev"
incremental = false

# ci turns off debug info, etc for dependencies to allow for smaller binaries making caching more effective
[profile.ci.package."*"]
debug = false
debug-assertions = false
strip = "debuginfo"
incremental = false
